src/test/deca/syntax/valid/test_class_enonce.deca
// Description:
//    exemple avec objet de l'énoncé
//
// Resultats: Creation de la classe A 
//et instanciation de la classe A avec appel de méthode et affichage
//
//
// Historique:
//    crée le 18/01/2021


class A {
    protected int x;
    int getX(){
        return x;
    }
    void setX(int x){
        this.x = x;
    }
}

{
    A a = new A();
    a.setX(1);
    println("a.getX() = ", a.getX()) ;
}