src/test/deca/syntax/invalid/test_tokens_classes.deca
// Description:
//    tests des clases
//
// Resultats:
//    Ligne 12 : Erreur de syntaxe aux alentours de 'null'
//    test_lex ne doit pas donner d'erreur
//
// Historique:
//    crée le 11/01/2022


class A
null
class B Extends A
new A()
int getX()
setX(int X)
void
return
protected
a.x
a.setX(20)

